compiler-skeleton/tests/compile-error/comp_array.ln
a:int[];
b:bool[];

a[]={true,0,0};